--- a/gb/21/3/22/n12826258.md
+++ b/gb/21/3/22/n12826258.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/opizhb3915/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/opizhb3915/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/opizhb3915/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/opizhb3915/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/opizhb3915/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/opizhb3915/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/opizhb3915/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/opizhb3915/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/opizhb3915/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/opizhb3915/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/opizhb3915/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/opizhb3915/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/opizhb3915/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/opizhb3915/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/opizhb3915/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/opizhb3915/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/opizhb3915/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/opizhb3915/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/opizhb3915/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/opizhb3915/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/opizhb3915/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/opizhb3915/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/opizhb3915/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/opizhb3915/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/auytan380/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/auytan380/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/auytan380/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>地下室进水 保险公司不认账 密市夫妇这样解决</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2021年03月21日】（大纪元记者李平多伦多报导）买房成为有房族本是高兴事，安省密市一对夫妇买下的房子却成噩梦：家中<ahref="https://github.com/opizhb3915/djy/blob/master/gb/tag/%E8%BF%9B%E6%B0%B4.md#1">进水</a>，<ahref="https://github.com/opizhb3915/djy/blob/master/gb/tag/%E4%BF%9D%E9%99%A9.md#1">保险</a>公司却不认账，好在是在第三方调解机构干预下，事情有了一个圆满结果。</p>
-<p>据加媒CTV报导，去年秋，密市波伊科（Derek Boyko）和加各达特（Michelle Jagdat）夫妇在密市买下一幢独立屋，去年圣诞节期间，<ahref="https://github.com/opizhb3915/djy/blob/master/gb/tag/%E5%9C%B0%E4%B8%8B%E5%AE%A4.md#1">地下室</a>突然<ahref="https://github.com/opizhb3915/djy/blob/master/gb/tag/%E8%BF%9B%E6%B0%B4.md#1">进水</a>，车道也被水淹，却怎么也查不出进水原因。</p>
-<p>联系Allstate<ahref="https://github.com/opizhb3915/djy/blob/master/gb/tag/%E4%BF%9D%E9%99%A9.md#1">保险</a>公司，保险公司叫他们不要担心，满口答应赔偿。因实在找不出漏水原因，他们打市府热线询问，才发现是因为经过他们家房子的市政水管破裂导致家中进水。</p>
-<p>找到原因后，保险公司却说，这类进水不在承保范围，拒绝他们的理赔申请。无奈之下，他们自掏腰包8,000元更换街道连接房子的水管，此前花钱装修一新的<ahref="https://github.com/opizhb3915/djy/blob/master/gb/tag/%E5%9C%B0%E4%B8%8B%E5%AE%A4.md#1">地下室</a>也需大笔钱维修。</p>
+<p>【大纪元2021年03月21日】（大纪元记者李平多伦多报导）买房成为有房族本是高兴事，安省密市一对夫妇买下的房子却成噩梦：家中<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E8%BF%9B%E6%B0%B4.md#1">进水</a>，<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E4%BF%9D%E9%99%A9.md#1">保险</a>公司却不认账，好在是在第三方调解机构干预下，事情有了一个圆满结果。</p>
+<p>据加媒CTV报导，去年秋，密市波伊科（Derek Boyko）和加各达特（Michelle Jagdat）夫妇在密市买下一幢独立屋，去年圣诞节期间，<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E5%9C%B0%E4%B8%8B%E5%AE%A4.md#1">地下室</a>突然<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E8%BF%9B%E6%B0%B4.md#1">进水</a>，车道也被水淹，却怎么也查不出进水原因。</p>
+<p>联系Allstate<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E4%BF%9D%E9%99%A9.md#1">保险</a>公司，保险公司叫他们不要担心，满口答应赔偿。因实在找不出漏水原因，他们打市府热线询问，才发现是因为经过他们家房子的市政水管破裂导致家中进水。</p>
+<p>找到原因后，保险公司却说，这类进水不在承保范围，拒绝他们的理赔申请。无奈之下，他们自掏腰包8,000元更换街道连接房子的水管，此前花钱装修一新的<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E5%9C%B0%E4%B8%8B%E5%AE%A4.md#1">地下室</a>也需大笔钱维修。</p>
 <p>波伊科夫妇投诉，保险公司说他们的保险是当地条件最好的，但额外水险不包括他们房子所在位置和邮编。他们花钱买保险，保险公司却连这种损失都不赔。</p>
 <p>保险公司拒赔后，夫妇俩投诉到保险公司与客户纠纷调解独立机构General Insurance OmbudService。OmbudService调查结果是支持客户投诉。事过3个月后，夫妇俩终于收到Allstate公司2.4万元的理赔支票，令他们欣喜不已。</p>
 <p>Allstate保险公司解释，他们致力于提供高标准的客服，为客户提供清晰明确的保险说明。经仔细调查后，他们决定支付理赔。</p>
@@ -19,47 +19,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/20/12/6/n12599956.md#1">0.99%! 加汇丰银行推出创纪录低房贷利率</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/20/12/17/n12626123.md#1">房屋装修 如何识别不良承包商</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/20/12/17/n12628576.md#1">卡尔加里冰雹风暴排第一</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/1/28/n12718852.md#1">症状长期不去 染疫女子向保险公司索赔难</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/23/n12829681.md#1">水灾险年费高达3万 买房建屋当心泛洪区</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/25/n12834010.md#1">经纪公司：今年加国安省度假屋价格料涨17%</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/25/n12834014.md#1">前所未有 6成加拿大人认为房价还会涨</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/16/n12813358.md#1">大多伦多宾顿市房价大涨 2月首破百万</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/17/n12817533.md#1">去年4季度 加拿大家庭按揭债务再创新高</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/18/n12818265.md#1">大陆人喜欢海外哪里买房？首选美国 加国第4</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/12/6/n12599956.md#1">0.99%! 加汇丰银行推出创纪录低房贷利率</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/12/17/n12626123.md#1">房屋装修 如何识别不良承包商</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/12/17/n12628576.md#1">卡尔加里冰雹风暴排第一</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/1/28/n12718852.md#1">症状长期不去 染疫女子向保险公司索赔难</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/3/23/n12829681.md#1">水灾险年费高达3万 买房建屋当心泛洪区</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751210.md#1">多伦多唐人街一批商铺未交地税 市府正在拍卖</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13750537.md#1">油价涨 带火卡尔加里商业地产</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13750578.md#1">满银：多伦多郊区房价高估74% 高估程度空前</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13750571.md#1">加拿大央行连续加息 房价不久或跌两位数</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13750493.md#1">多伦多市公寓租金四月份同比涨24%</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/13/n10711496.md#1" target="_blank">共产暴政录：喊错口号导致六千人被杀</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/5/n10955468.md#1" target="_blank">出版24年 42种语言 拥有全球读者的转法轮</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/15/n9959503.md#1" target="_blank">佚名：这个“英雄”诞生记让人不寒而栗……</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/22/n8022581.md#1" target="_blank">因祸得福，我用生命迎接春天</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/16/7/12/n8091804.md#1">【传奇】赵匡胤千里送京娘</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/18/n12820630.md#1">二人元神离体游地府 都看见了他</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/21/n12825595.md#1">光的流动和辉煌：一幅值得记住的油画</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/14/n12810364.md#1">西方轮回研究漫笔：转世前的安排和约定</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/20/4/3/n11999735.md#1">华盛顿将军系列故事：打马少年 入画江山? ?</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/25/n12833967.md#1">【横河直播】北京报复性反制裁 欧中协议危矣</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/22/n12828631.md#1">【思想领袖】福克斯：自由被身份政治吞噬</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/24/n12833514.md#1">【财商天下】美债发狂股灾起 中美打金融战？</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/23/n12829659.md#1">上海政府食堂菜价曝光 传爆料人因泄密被拘</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/23/n12830638.md#1">法国召见中共大使 直击要害令卢沙野震惊</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/23/n12830623.md#1">习近平白忙乎？欧盟取消投资协定审议会</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/22/n12828661.md#1">演少女被嘲体形太壮 刘涛霸气回应也帮了杨幂</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/23/n12831214.md#1">范冰冰公开健身视频 真实身材媲美教练</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/23/n12828972.md#1">谢霆锋被爆投资失利 近亿港元店租金大跌五成</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/23/n12829199.md#1">李亮瑾顺利产子 张峰奇感动报喜“老婆辛苦”</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/22/n12827709.md#1">罗时丰大港开唱：纵使过气，也不要丧气</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/23/n12829042.md#1">绿茶一般人不适合喝？名中医教6大类茶养生喝法</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/19/n12821223.md#1">洋葱可防癌、降三高 吃这2颜色抗氧化效果最好</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/23/n12829066.md#1">3个月减14公斤 她这样准备食材让三餐变方便</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/24/n12831986.md#1">奇文共欣赏 推特用户分享惊人的事实（中）</a></li>
-<li><a href="https://github.com/opizhb3915/djy/blob/master/gb/21/3/23/n12829684.md#1">女牙医生产时死了一回 看见“神奇丛林”</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751795.md#1">【方菲访谈】林培瑞：六四与今天的中国（上）</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/opizhb3915/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/opizhb3915/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/22/n12826258.htm">地下室进水 保险公司不认账 密市夫妇这样解决</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/22/n12826258.htm">地下室进水 保险公司不认账 密市夫妇这样解决</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/opizhb3915/djy/blob/master/gb/21/3/22/n12826258.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/opizhb3915/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/opizhb3915/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/opizhb3915/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/opizhb3915/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/opizhb3915/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/auytan380/djy/blob/master/gb/21/3/22/n12826258.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
